--- a/index.html
+++ b/index.html
@@ -3,8 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Elixir Progress Bar</title>
+    
+    <title>PotionBar</title>
+
+    <link rel="icon" type="image/x-icon" href="PotionBarIcon.ico">
+
     <style>
+        /* ... (Keep all your existing CSS styles here) ... */
         @import url('https://fonts.googleapis.com/css2?family=Fredoka+One&family=Press+Start+2P&display=swap');
 
         :root {
